[tool.poetry]
name = "nlp-disaster-tweets"
version = "0.1.0"
description = "Utilize NLP techniques to classify disaster-related tweets as real or fake. Develop a model using RNNs or Transformers to process and analyze text data. Enhance disaster response efforts by filtering misinformation on social media during emergencies."
authors = ["silvinohenrique.teixeiramalta <silvinohenrique.teixeiramalta@isobar.onmicrosoft.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nlp_disaster_tweets"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
jupyterlab = "^4.0.3"
pandas = "^2.0.3"
urllib3="1.26.9"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
datasets = "^2.14.0"
transformers = "^4.31.0"
scikit-learn = "^1.3.0"
torch = "^2.0.1"
accelerate = "^0.21.0"
ipywidgets = "^8.0.7"
kaggle = "^1.5.16"
azure-ai-ml = "^1.8.0"
azure-identity = "^1.13.0"
azureml-infra-tools = "0.1.1"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
